name:                opencentauri-graphical
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
author:              Duncan Burke
maintainer:          duncankburke@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src-lib
  ghc-options:       -Wall
                     -fno-warn-unused-do-bind
                     -fno-warn-missing-signatures
  default-language:  Haskell2010
  build-depends:     base,
                     opencentauri-core,
                     OpenGL,
                     OpenGLRaw,
                     sdl2,
                     cairo,
                     pango,
                     cmdargs,
                     filepath,
                     mtl,
                     transformers,
                     ConfigFile,
                     text
  exposed-modules:   Game.Centauri.Graphical,
                     Game.Centauri.Configuration

executable opencentauri
  main-is:             Main.hs
  ghc-options:         -Wall
  hs-source-dirs:      src-exec
  build-depends:       base,
                       opencentauri-graphical
  default-language:    Haskell2010
