name:                opencentauri-graphical
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
author:              Duncan Burke
maintainer:          duncankburke@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src-lib
  ghc-options:       -Wall
                     -fno-warn-unused-do-bind
                     -fno-warn-missing-signatures
  default-language:  Haskell2010
  build-depends:     base,
                     opencentauri-core,
                     OpenGL,
                     OpenGLRaw,
                     sdl2,
                     cairo,
                     pango,
                     cmdargs,
                     filepath,
                     mtl,
                     ConfigFile,
                     text,
                     bracket-monad,
                     assert
  exposed-modules:   Game.Centauri.Graphical,
                     Game.Centauri.Configuration,
                     Game.Centauri.Graphical.OpenGL,
                     Game.Centauri.Graphical.SDL,
                     Game.Centauri.Graphical.Events

executable opencentauri
  main-is:             Main.hs
  ghc-options:         -Wall
  hs-source-dirs:      src-exec
  build-depends:       base,
                       opencentauri-graphical
  default-language:    Haskell2010
