name:                opencentauri-graphical
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
author:              Duncan Burke
maintainer:          duncankburke@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src-lib
  ghc-options:       -Wall
                     -fno-warn-unused-do-bind
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-orphans
  default-language:  Haskell2010
  build-depends:     base,
                     opencentauri-core,
                     OpenGL,
                     OpenGLRaw,
                     sdl2,
                     cairo,
                     pango,
                     cmdargs,
                     filepath,
                     mtl,
                     ConfigFile,
                     text,
                     bracket-monad,
                     assert,
                     data-r-tree,
                     containers,
                     tuple,
                     utf8-string
  exposed-modules:   Game.Centauri.Graphical,
                     Game.Centauri.Configuration,
                     Game.Centauri.Graphical.OpenGL,
                     Game.Centauri.Graphical.SDL,
                     Game.Centauri.Graphical.Events,
                     Game.Centauri.Graphical.Core
                     Game.Centauri.Graphical.Configuration,
                     Game.Centauri.Graphical.UI,
                     Game.Centauri.Graphical.UI.Events,
                     Game.Centauri.Graphical.UI.Widgets,
                     Game.Centauri.Graphical.UI.State,
                     Game.Centauri.Graphical.UI.Configuration
                     Game.Centauri.Graphical.Rendering,
                     Game.Centauri.Graphical.Rendering.State
  extensions:        NamedFieldPuns,
                     ScopedTypeVariables,
                     MonadComprehensions,
                     TupleSections,
                     DisambiguateRecordFields,
                     RecordWildCards,
                     ExistentialQuantification
executable opencentauri
  main-is:             Main.hs
  ghc-options:         -Wall
  hs-source-dirs:      src-exec
  build-depends:       base,
                       opencentauri-graphical
  default-language:    Haskell2010
