name:                  toliman-graphical
version:               0.1.0.0
license:               MPL-2.0
license-file:          LICENSE
author:                Duncan Burke
maintainer:            duncankburke@gmail.com
category:              Game
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src-lib
  ghc-options:         -Wall
                       -fwarn-monomorphism-restriction
                       -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7,
                       toliman-core,
                       transformers,
                       layers,
                       OpenGL >= 2.9.2.0,
                       OpenGLRaw >= 1.5.0.0,
                       sdl2 >= 1.3.0,
                       cairo,
                       pango,
                       filepath,
                       text,
                       assert,
                       data-r-tree,
                       containers,
                       tuple,
                       utf8-string,
                       lens >= 4.6,
                       free,
                       template-haskell,
                       sodium,
                       dequeue
  exposed-modules:	   Game.Toliman.Graphical,
                       Game.Toliman.Graphical.Core,
                       Game.Toliman.Graphical.Types,
                       Game.Toliman.Graphical.State,
                       Game.Toliman.Graphical.SDL,
                       Game.Toliman.Graphical.SDL.Types,
                       Game.Toliman.Graphical.SDL.Core,
                       Game.Toliman.Graphical.SDL.Log,
                       Game.Toliman.Graphical.SDL.Events,
                       Game.Toliman.Graphical.Rendering,
                       Game.Toliman.Graphical.Rendering.Types,
                       Game.Toliman.Graphical.Rendering.OpenGL,
                       Game.Toliman.Graphical.Rendering.OpenGL.Types,
                       Game.Toliman.Graphical.Rendering.OpenGL.Core,
                       Game.Toliman.Graphical.Rendering.Window
  other-modules:       Game.Toliman.Graphical.Internal.Types,
                       Game.Toliman.Graphical.Internal.Errors
  default-extensions:  ViewPatterns,
                       PatternSynonyms,
                       NamedFieldPuns,
                       RecordWildCards,
                       GADTs,
                       DeriveDataTypeable,
                       DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable,
                       MultiParamTypeClasses,
                       FunctionalDependencies,
                       FlexibleInstances,
                       TypeSynonymInstances,
                       TypeFamilies,
                       ConstraintKinds,
                       FlexibleContexts,
                       RankNTypes,
                       ScopedTypeVariables,
                       BangPatterns,
                       MultiWayIf
executable toliman
  main-is:             Main.hs
  ghc-options:         -Wall
  hs-source-dirs:      src-exec
  build-depends:       base,
                       toliman-graphical
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             main.hs
  build-depends:       base >= 4 && < 5,
                       tasty >= 0.10.0,
                       tasty-hunit >= 0.9,
                       tasty-smallcheck >= 0.8,
                       smallcheck >= 1.0,
                       toliman-graphical,
                       layers,
                       transformers
